# sca

./: CMakeLists.txt  LICENSE  README.md  aes_pwn.py  attack-ex.c  build.sh  launch_attacks.c  pearson.c  read_csv.c  read_csv.h  xpa_attacks.c  xpa_attacks.h  xpa_new.c
aes_traces/: aes_traces.csv  aes_traces_2.csv
countermeasures/: aes_enc.c  aes_mask.c  aes_origin.c  sboxes_rsm.c  sboxes_rsm.h
include/: constants.h  read_csv.h  xpa_attacks.h  xpa_new.h
src/: correlation.c  correlation.h  cpa_write.c  cpa_write.h  launch_attacks.c  pearson.c  pearson.h  read_csv.c  xpa_attacks.c  xpa_new.c
